--- a/www/index.html
+++ b/www/index.html
@@ -1,18 +1,9 @@
-<!DOCTYPE html> 
-    <html> 
-    <head>
-        <Title>Node Express Static Web Server</Title>
-        <meta charset="utf-8">
-        <link rel="stylesheet" href="css/style.css">
-    </head>   
-    <body>
-        <article>
-            <div class="box">
-                <h1>Node Express Static Web Server!</h1>
-                <img src="https://sub1.kevinchisholm.com/blog/images/node-js-logo.png" alt="">
-            </div>
-        </article>
-        <script src="js/lib/jquery-3.2.1.min.js"></script>
-        <script src="js/index.js"></script>
-    </body> 
+<html>
+<body>
+<input type="button" class="button" onclick="CalculatePI()" value="Calculate Pi" />
+<script src="js/computePI.js"></script>
+<link rel="stylesheet" type="text/css" href="css/computePI.css">
+<p>Press the buttom to start the program.</p>
+<p>The more steps you enter, the better the computation accuracy and the more time the computation will take.</p>
+</body>
 </html>
